amos Überflüg NEAT Grundlagen

--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -113,3 +113,11 @@
   note = {Accessed: 30.12.2023}
 }
 
+@article{Such2017DeepNG,
+  title={Deep Neuroevolution: Genetic Algorithms Are a Competitive Alternative for Training Deep Neural Networks for Reinforcement Learning},
+  author={Felipe Petroski Such and Vashisht Madhavan and Edoardo Conti and Joel Lehman and Kenneth O. Stanley and Jeff Clune},
+  journal={ArXiv},
+  year={2017},
+  volume={abs/1712.06567},
+  url={https://api.semanticscholar.org/CorpusID:5044808}
+}
