amos addded implementationsdetails

--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -113,6 +113,20 @@
   note = {Accessed: 30.12.2023}
 }
 
+@misc{pythonneat,
+  author = {Python NEAT},
+  title = {Python NEAT},
+  url = {https://neat-python.readthedocs.io/en/latest/},
+  note = {Accessed: 30.12.2023}
+}
+
+
+@misc{gymnasiumbib,
+  author = {Faram Foundation},
+  title = {Gymnasium Bibliothek},
+  url = {https://github.com/Farama-Foundation/Gymnasium},
+  note = {Accessed: 30.12.2023}
+}
 @article{Such2017DeepNG,
   title={Deep Neuroevolution: Genetic Algorithms Are a Competitive Alternative for Training Deep Neural Networks for Reinforcement Learning},
   author={Felipe Petroski Such and Vashisht Madhavan and Edoardo Conti and Joel Lehman and Kenneth O. Stanley and Jeff Clune},
