--- a/Report/chapter2.tex
+++ b/Report/chapter2.tex
@@ -41,7 +41,7 @@ Es gibt fünf Arten von Mutationen in NEAT, welche das neu-entstandene Genom dur
 \textbf{Selektion und Speziation in NEAT}
 
 \begin{equation}
-\text{d}(\text{G_1, G_2}) = c_1 \cdot \frac{E}{N} + c_2 \cdot \frac{D}{N} + c_3 \cdot \overline{W}
+d(G_1, G_2) = c_1 \cdot \frac{E}{N} + c_2 \cdot \frac{D}{N} + c_3 \cdot \overline{W}
 \label{eq:neatdistance}
 \end{equation}
 
